PCI8510/VB.NET/PCI8510.vb


    '################# 内存映射寄存器直接操作及读写函数 ########################
    ' 适用于用户对本设备更直接、更特殊、更低层、更复杂的控制。比如根据特殊的
    ' 控制对象需要特殊的控制流程和控制效率时，则用户可以使用这些接口予以实现。
    Declare Function PCI8510_GetDeviceBar Lib "PCI8510_32" ( _
            ByVal hDevice As IntPtr, _
            ByVal pulPCIBar() As Int64) As Boolean  ' 取得指定的指定设备寄存器组BAR地址' 设备对象句柄,它由CreateDevice函数创建' 返回PCI BAR所有地址,具体PCI BAR中有多少可用地址请看硬件说明书

    Declare Function PCI8510_GetDevVersion Lib "PCI8510_32" ( _
            ByVal hDevice As IntPtr, _
            ByRef pulFmwVersion As UInt32, _
            ByRef pulDriverVersion As UInt32) As Boolean ' 获取设备固件及程序版本' 设备对象句柄,它由CreateDevice函数创建 ' 固件版本' 驱动版本

    Declare Function PCI8510_WriteRegisterByte Lib "PCI8510_32" ( _
         ByVal hDevice As IntPtr, _
         ByVal LinearAddr As Int64, _
         ByVal OffsetBytes As UInt32, _
         ByVal Value As Byte) As Boolean            ' 往指定寄存器空间位置写入单节字数据' 设备对象句柄,它由CreateDevice函数创建' 指定寄存器的线性基地址,它等于GetDeviceAddr中的LinearAddr参数返回值' 相对于线性基地址基地址的偏移位置(字节)' 往指定地址写入单字节数据（其地址由线性基地址和偏移位置决定）

    Declare Function PCI8510_WriteRegisterWord Lib "PCI8510_32" ( _
            ByVal hDevice As IntPtr, _
            ByVal LinearAddr As Int64, _
            ByVal OffsetBytes As UInt32, _
            ByVal Value As UInt16) As Boolean ' 写双字节数据（其余同上）

    Declare Function PCI8510_WriteRegisterULong Lib "PCI8510_32" ( _
            ByVal hDevice As IntPtr, _
            ByVal LinearAddr As Int64, _
            ByVal OffsetBytes As UInt32, _
            ByVal Value As UInt32) As Boolean ' 写四节字数据（其余同上）

    Declare Function PCI8510_ReadRegisterByte Lib "PCI8510_32" ( _
         ByVal hDevice As IntPtr, _
         ByVal LinearAddr As Int64, _
         ByVal OffsetBytes As UInt32) As Byte ' 读入单字节数据（其余同上）

    Declare Function PCI8510_ReadRegisterWord Lib "PCI8510_32" ( _
         ByVal hDevice As IntPtr, _
         ByVal LinearAddr As Int64, _
         ByVal OffsetBytes As UInt32) As UInt16 ' 读入双字节数据（其余同上）

    Declare Function PCI8510_ReadRegisterULong Lib "PCI8510_32" ( _
         ByVal hDevice As IntPtr, _
         ByVal LinearAddr As Int64, _
         ByVal OffsetBytes As UInt32) As UInt32 ' 读入四字节数据（其余同上）

    '################# I/O端口直接操作及读写函数 ########################
    ' 适用于用户对本设备更直接、更特殊、更低层、更复杂的控制。比如根据特殊的
    ' 控制对象需要特殊的控制流程和控制效率时，则用户可以使用这些接口予以实现。
    ' 但这些函数主要适用于传统设备，如ISA总线、并口、串口等设备，不能用于本PCI设备
    Declare Function PCI8510_WritePortByte Lib "PCI8510_32" ( _
         ByVal hDevice As IntPtr, _
         ByVal nPort As Int64, _
         ByVal Value As Byte) As Boolean         ' 8位写端口' 设备句柄(由CreateDevice创建)	' 端口地址' 写出的8位整型数据
    Declare Function PCI8510_WritePortWord Lib "PCI8510_32" (ByVal hDevice As IntPtr, ByVal nPort As Int64, ByVal Value As UInt16) As Boolean
    Declare Function PCI8510_WritePortULong Lib "PCI8510_32" (ByVal hDevice As IntPtr, ByVal nPort As Int64, ByVal Value As UInt32) As Boolean

    Declare Function PCI8510_ReadPortByte Lib "PCI8510_32" (ByVal hDevice As IntPtr, ByVal nPort As Int64) As Byte
    Declare Function PCI8510_ReadPortWord Lib "PCI8510_32" (ByVal hDevice As IntPtr, ByVal nPort As Int64) As UInt16
    Declare Function PCI8510_ReadPortULong Lib "PCI8510_32" (ByVal hDevice As IntPtr, ByVal nPort As Int64) As UInt32
    ' 如果您要在用户模式下，直接访问硬件端口，请安装并使用ISA\CommUser下的驱动ReadPortByteEx等函数

  
    '########################### 线程操作函数 ######################################
    Declare Function PCI8510_CreateSystemEvent Lib "PCI8510_32" () As IntPtr  ' 创建内核事件对象，供InitDeviceDmaAD和VB子线程等函数使用
    Declare Function PCI8510_ReleaseSystemEvent Lib "PCI8510_32" (ByVal hEvent As IntPtr) As Boolean  ' 释放内核事件对象
 

    '***********************************************************
    ' 各种FIFO存储器的长度(点)
    Public Const FIFO_IDT7202_LENGTH = 1024
    Public Const FIFO_IDT7203_LENGTH = 2048
    Public Const FIFO_IDT7204_LENGTH = 4096
    Public Const FIFO_IDT7205_LENGTH = 8192
    Public Const FIFO_IDT7206_LENGTH = 16384
    Public Const FIFO_IDT7207_LENGTH = 32768


    '***********************************************************
    ' 设备地址获取函数GetDeviceAddr的参数RegisterID所使用的选项(有效部分)
    Public Const PCI8510_REG_MEM_PLXCHIP = &H0  ' 0号寄存器对应PLX芯片所使用的内存模式基地址(使用LinearAddr)
    Public Const PCI8510_REG_IO_PLXCHIP = &H1  ' 1号寄存器对应PLX芯片所使用的IO模式基地址(使用PhysAddr)


End Module
